--- a/src/client/gradle/libs.versions.toml
+++ b/src/client/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "1.9.22"
 kotlinx = "1.8.0"
 ptotobuf = "3.25.3"
-grpc-protobuf = "1.61.0"
+grpc-protobuf = "1.62.2"
 grpc-kotlin = "1.4.1"
 velocity = "3.3.0-SNAPSHOT"
 
@@ -11,8 +11,9 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-common", version.
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx" }
 ptotobuf-kotlin = { module = "com.google.protobuf:protobuf-kotlin", version.ref = "ptotobuf" }
 ptotobuf-protoc = { module = "com.google.protobuf:protoc", version.ref = "ptotobuf" }
-grpc-protobuf = { module = "io.grpc:grpc-protobuf", version.ref = "grpc-protobuf" }
 grpc-plugin = { module = "io.grpc:protoc-gen-grpc-java", version.ref = "grpc-protobuf" }
+grpc-protobuf = { module = "io.grpc:grpc-protobuf", version.ref = "grpc-protobuf" }
+grpc-netty = { module = "io.grpc:grpc-netty", version.ref = "grpc-protobuf" }
 grpc-kotlin-stub = { module = "io.grpc:grpc-kotlin-stub", version.ref = "grpc-kotlin" }
 grpc-kotlin-plugin = { module = "io.grpc:protoc-gen-grpc-kotlin", version.ref = "grpc-kotlin" }
 
@@ -24,3 +25,4 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 protobuf = { id = "com.google.protobuf", version = "0.9.4" }
 shadow = { id = "com.github.johnrengelman.shadow", version = "8.1.1" }
 spotless = { id = "com.diffplug.spotless", version = "6.25.0" }
+sponge = { id = "org.spongepowered.gradle.plugin", version = "2.0.0" }
