--- a/.editorconfig
+++ b/.editorconfig
@@ -161,16 +161,29 @@ dotnet_naming_symbols.public_fields.applicable_accessibilities = private, privat
 dotnet_naming_style.pascal_case.capitalization = pascal_case
 
 [*.{kt,kts}]
+max_line_length = off
 ij_kotlin_allow_trailing_comma = false
 ij_kotlin_allow_trailing_comma_on_call_site = false
 ij_kotlin_packages_to_use_import_on_demand = unset
 
 [*.kt]
-ktlint_standard_indent = disabled
-ktlint_standard_string-template-indent = disabled
+ktlint_standard_annotation = disabled
+ktlint_standard_argument-list-wrapping = disabled
+ktlint_standard_blank-line-before-declaration = disabled
+ktlint_standard_colon-spacing = disabled
 ktlint_standard_curly-spacing = disabled
-ktlint_standard_keyword-spacing = disabled
-ktlint_standard_no-line-break-after-else = disabled
 ktlint_standard_function-signature = disabled
 ktlint_standard_function-start-of-body-spacing = disabled
+ktlint_standard_indent = disabled
+ktlint_standard_keyword-spacing = disabled
+ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_no-line-break-after-else = disabled
+ktlint_standard_parameter-list-wrapping = disabled
+ktlint_standard_property-naming = disabled
+ktlint_standard_string-template-indent = disabled
+ktlint_standard_trailing-comma-on-call-site = disabled
+ktlint_standard_trailing-comma-on-declaration-site = disabled
+ktlint_standard_try-catch-finally-spacing = disabled
+ktlint_standard_type-parameter-list-spacing = disabled
 ktlint_standard_unnecessary-parentheses-before-trailing-lambda = disabled
+ktlint_standard_wrapping = disabled
